--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aim Trainer</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="size-wrapper">
-    <div id="controls">
-      <label for="targetDuration">
-        Target Duration (s)
-        <input id="targetDuration" type="number" value="2" min="1" max="5"/>
-      </label>
-      <br>
-      <label for="targetDiameter">
-        Target Diameter (px)
-        <input id="targetDiameter" type="range" value="50" min="10" max="200"/>
-      </label>
-      <br>
-      <label for="spawnInterval">
-        Target Interval (ms)
-        <input id="spawnInterval" type="range" value="750" min="100" max="5000"/>
-      </label>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aim Trainer</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="size-wrapper">
+      <div id="controls">
+        <label for="targetDuration">
+          Target Duration
+          <input id="targetDuration" type="number" value="2" min="1" max="5" />
+          <div id="targetDurationOut">2s</div>
+        </label>
+        <br />
+        <label for="targetDiameter">
+          Target Diameter
+          <input
+            id="targetDiameter"
+            type="range"
+            value="50"
+            min="10"
+            max="200"
+          />
+          <div id="targetDiameterOut">50px</div>
+        </label>
+        <br />
+        <label for="spawnInterval">
+          Spawn Interval
+          <input
+            id="spawnInterval"
+            type="range"
+            value="750"
+            min="100"
+            max="5000"
+          />
+          <div id="spawnIntervalOut">750ms</div>
+        </label>
+        <button id="startGame">Start Game</button>
+        <button id="stopGame">Stop Game</button>
+      </div>
+      <div id="target-container"></div>
+      <div id="scoreboard"></div>
     </div>
-    <div id="target-container">
-  </div>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
