--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aim Trainer</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+    </style>
   </head>
   <body>
-    <div id="size-wrapper">
-      <div id="controls">
-        <label for="targetDuration">
-          Target Duration
+    <div id="controls">
+      <div id="controls-layout">
+        <div class="control">
+          <p>Target Duration</p>
           <input id="targetDuration" type="number" value="2" min="1" max="5" />
           <div id="targetDurationOut">2s</div>
-        </label>
-        <br />
-        <label for="targetDiameter">
-          Target Diameter
+        </div>
+        <div class="control">
+          <p>Target Diameter</p>
           <input
             id="targetDiameter"
             type="range"
@@ -26,10 +28,9 @@
             max="200"
           />
           <div id="targetDiameterOut">50px</div>
-        </label>
-        <br />
-        <label for="spawnInterval">
-          Spawn Interval
+        </div>
+        <div class="control">
+          <p>Spawn Interval</p>
           <input
             id="spawnInterval"
             type="range"
@@ -38,12 +39,19 @@
             max="5000"
           />
           <div id="spawnIntervalOut">750ms</div>
-        </label>
-        <button id="startGame">Start Game</button>
-        <button id="stopGame">Stop Game</button>
+        </div>
       </div>
+    </div>
+    <div id="scoreboard">
+      <p>Target Hits: <span id="targetHits"></span></p>
+      <p>Missed Clicks: <span id="missedClicks"></span></p>
+      <p>Total Clicks: <span id="totalClicks"></span></p>
+      <p>Accuracy: <span id="accuracy"></span></p>
+      <p>Targets Lost: <span id="targetsLost"></span></p>
+    </div>
+    <div id="screen">
+      <div id="overlay"><p>Press <kbd>Space</kbd> to start / stop trainer.</p></div>
       <div id="target-container"></div>
-      <div id="scoreboard"></div>
     </div>
     <script src="index.js"></script>
   </body>
