added resolution controls

--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
           />
           <div id="spawnIntervalOut">750ms</div>
         </div>
+        <div class="control">
+          <p>Fullscreen</p>
+          <input id="fullscreen" type="checkbox" id="fullscreen" checked>
+        </div>
+        <div class="control">
+          <p>Width</p>
+          <input
+            id="screenWidth"
+            type="number"
+            value="800"
+            min="200"
+            max="2000"
+          />
+          <div id="screenWidthOut">800px</div>
+        </div>
+        <div class="control">
+          <p>Height</p>
+          <input
+            id="screenHeight"
+            type="number"
+            value="600"
+            min="200"
+            max="2000"
+          />
+          <div id="screenHeightOut">600px</div>
+        </div>
       </div>
     </div>
     <div id="scoreboard">
